# sei-solar-depin

./: .gitignore  README.md  test.txt
esp32/: README.md  boot.py  solar_charging.py
mcp-server/: .env.example  README.md  blockchain.py  config.py  index.html  main.py  pyproject.toml  requirements.txt
mcp-server/api/: __init__.py  routes.py  tool_handlers.py
mcp-server/contracts/: ChargingStation_address.json  ChargingStation_contract.json
mcp-server/server/: __init__.py  mcp_tools.py
mcp-server/tools/: __init__.py  charging_booking_tools.py  user_wallet_tools.py
mock-esp32/: main.py  pyproject.toml
smartcontract/: .env.exampl  README.md  hardhat.config.js  package-lock.json  package.json
smartcontract/contracts/: ChargingBooking.sol  ChargingStation.sol  UserWallet.sol
smartcontract/scripts/: deploy.js
smartcontract/test/: charging.test.js  device-control.test.js  emergency-stop.test.js
ui/: README.md  env.example  next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/chat/: route.ts
ui/src/app/api/openai/: route.ts
ui/src/app/dashboard/: page.tsx
ui/src/app/dashboard/consumer/: page.tsx
ui/src/app/dashboard/owner/: page.tsx
ui/src/components/: AdvancedChatInterface.tsx  ChatInterface.tsx  MapboxMap.tsx
ui/src/contexts/: WalletContext.tsx
ui/src/contracts/: ChargingBooking_address.json  ChargingBooking_contract.json  UserWallet_address.json  UserWallet_contract.json
ui/src/lib/: contracts.ts  utils.ts
